--- a/jj-service-web/src/main/webapp/static/html/body-top.html
+++ b/jj-service-web/src/main/webapp/static/html/body-top.html
@@ -44,7 +44,7 @@
     </div>
      
     <div class="linefont">
-	    <a href="../xcenter/index.html">
+	    <a href="../xcenter/center.html">
         <img class="middle" src="/static/images/fgdf.png">
    	    <div class="inblock">会员中心</div>
       </a>
@@ -58,5 +58,5 @@
     <select class="city mlr10" disabled="disabled"></select>   
     <select class="dist"></select>
   </div>
-  <div class="clearfix btnsDiv"><input type="button" id="choseOk" value="确定" class="btn btn-small"/><input type="button btn-small" id="choseCancel" value="取消" class="btn"/></div>
+  <div class="clearfix btnsDiv"><input type="button" id="choseOk" value="确定" class="btn btn-small"/><input type="button" id="choseCancel" value="取消" class="btn btn-small"/></div>
 </div>
