--- a/jj-service-web/src/main/webapp/static/html/footer.html
+++ b/jj-service-web/src/main/webapp/static/html/footer.html
@@ -1,3 +1,6 @@
+<div class="end">
+	<div class="end-font">版权所有 浙江聚焦电商企业管理有限公司 2016 保留所有权利</br>Copyright @ 2016 xiongniujr.com All Right Reserved  备案号:浙ICP备 102534535-1</div>
+</div>
 <script src="../../js/require.js"></script>
 <script src="../../js/lib/jquery-2.1.4.js"></script>
 <script src="../../js/lib/cityselect.js"></script>
