--- a/jj-service-web/src/main/webapp/static/html/position/detail.html
+++ b/jj-service-web/src/main/webapp/static/html/position/detail.html
@@ -6,19 +6,13 @@
 </head>
 <body>
 <link rel="import" href="../body-top.html?__inline">
-<div class="bigbox">
-    <ul class="name" id="leftNav">
-        <!--<li><a href="">运营总监<span>></span></a></li>
-        <li><a href="">运营主管<span>></span></a></li>
-        <li><a href="">运营<span>></span></a></li>
-        <li><a href="">设计总监<span>></span></a></li>
-        <li><a href="">设计/美工<span>></span></a></li>
-        <li><a href="">推广专员<span>></span></a></li>-->
+<div class="bigbox clearfix">
+    <ul class="name leftNav" id="leftNav">
     </ul>
 <!--右边-->
     <div class="area">
         <p class="bread-wrap">您所在的位置： 
-            <a href="">服务</a> &gt; <span>我是服务商</span>
+            <a href="./index.html">服务</a> &gt; <span>职位详情</span>
         </p>
         
         <div class="topname bt">职位信息</div>
@@ -95,7 +89,8 @@
                         <span class="xh">&nbsp;</span>
                         <span >职位描述</span>
                     </div>
-                    <div class="mt10 ml24" id="description"></div>
+                    <!--<div class="mt10 ml24" id="description"></div>-->
+                    <textarea class="sell" rows="10" cols="50" id="description" disabled></textarea>
                 </div>
             </form>
         </div>
