--- a/jj-service-web/src/main/webapp/static/html/position/fwlist.html
+++ b/jj-service-web/src/main/webapp/static/html/position/fwlist.html
@@ -25,6 +25,7 @@
         <table class="t-box at wp100" id="r-table">
             <thead>
                 <tr class="apply-j">
+                    <th>&nbsp;</th>
                     <th>职位名称</th>
                     <th>公司名称</th>
                     <th>职位月薪</th>
