--- a/jj-service-web/src/main/webapp/static/html/position/list-detail.html
+++ b/jj-service-web/src/main/webapp/static/html/position/list-detail.html
@@ -7,7 +7,7 @@
 
 <body>
 <link rel="import" href="../body-top.html?__inline">
-<div class="bigbox">
+<div class="bigbox clearfix">
     <ul class="name leftNav" id="leftNav">
         <!--<li><a href="">运营总监<span>></span></a></li>
         <li><a href="">运营主管<span>></span></a></li>
