--- a/jj-service-web/src/main/webapp/static/html/server/comp-detail.html
+++ b/jj-service-web/src/main/webapp/static/html/server/comp-detail.html
@@ -152,7 +152,7 @@
     
         <div class="topname bt cm">服务信息</div>
      
-        <div class="cd" id="watchBtn">查看详情</div>
+        <div class="cd cur_pointer" id="watchBtn">查看详情</div>
         <table class="t-box pad" id="bTable">
             <thead>
                 <tr class="apply-j">
