--- a/jj-service-web/src/main/webapp/static/html/server/detail.html
+++ b/jj-service-web/src/main/webapp/static/html/server/detail.html
@@ -451,7 +451,8 @@
               <span class="xh">*</span>
               <span>详情描述</span>
             </div>
-            <div class="mt10 ml24" id="description"></div>
+            <!--<div class="mt10 ml24" id="description"></div>-->
+            <textarea class="sell" rows="10" cols="50" id="description" disabled></textarea>
           </div>
         </form>
       </div>
