--- a/jj-service-web/src/main/webapp/static/html/server/editServer.html
+++ b/jj-service-web/src/main/webapp/static/html/server/editServer.html
@@ -21,7 +21,7 @@
     <!--右边-->
     <div class="area">
         <p class="bread-wrap">您所在的位置： 
-          <a href="./index.html">服务</a> &gt; <span>新增服务</span>
+          <a href="./index.html">服务</a> &gt; <span>修改服务</span>
         </p>
         
       <div class="topname bt cm"></div>
@@ -57,6 +57,7 @@
               <span>所属服务</span>
             </div>
             <input class="in-width" type="text" id="fwType" disabled/>
+            <input class="hidden" type="text" id="realType" />
           </div>
           <!--拍摄/摄影-->
           <div id="pspx" class="hidden choseCont choseCont2">
