--- a/jj-service-web/src/main/webapp/static/html/suser/fwlist.html
+++ b/jj-service-web/src/main/webapp/static/html/suser/fwlist.html
@@ -11,7 +11,7 @@
 <body>
 <link rel="import" href="../body-top.html?__inline">
 <div class="bigbox">
-    <ul  class="name">
+    <ul id="leftNav" class="name leftNav">
   		<li><a href="./center.html">企业中心<span>></span></a></li>
         <li><a href="./rclist.html">我要人才<span>></span></a></li>
         <li><a href="./fwlist.html">展示服务<span>></span></a></li>
@@ -34,7 +34,7 @@
                 <div class="cdh" id="fwDelete">删除</div>
                 <div class="cdh" id="fwSelect">查看详情</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="yfbfw-table">
+            <table class="t-box at" id="yfbfw-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -46,24 +46,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!--<tr>
-                        <td><input type="checkbox"></td>
-                        <td>金夫人婚纱摄影</td>
-                        <td>拍摄/写真</td>
-                        <td>橙袋科技</td>
-                        <td>￥500-￥999</td>
-                        <td>2016-10-20</td>
-                    </tr>-->
                     <tr><td colspan='6'><i class='loading-icon'></i></td></tr>
                 </tbody>
             </table>
         </div>
         <div id="bgxqfw" class="hidden fwContent fwContent1">
             <div> 
-                <!--<div class="cdh" id="bgxqSelect">查看详情</div>-->
+                <div class="cdh" id="bgxqSelect">查看详情</div>
                 <div class="cdh" id="bgxqDeal">立即处理</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="bgxqfw-table">
+            <table class="t-box at" id="bgxqfw-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -74,16 +66,7 @@
                         <th>更新日期</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <!--<tr>
-                        <td><input type="checkbox"></td>
-                        <td>金夫人婚纱摄影</td>
-                        <td>拍摄/写真</td>
-                        <td>橙袋科技</td>
-                        <td class="yxStatus">￥500-￥999</td>
-                        <td>2016-10-20</td>
-                    </tr>-->
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
         <div id="sxq" class="hidden fwContent fwContent2">
@@ -93,10 +76,10 @@
                 </select>
                 <input type="button" class="btn btn-small ml20" style="border: 1px solid #CDCDCD;" id="searchBtn" value="找需求"/>
             </div>
-            <div>
+            <div class="mt10">
                 <div class="cdh" id="sxqSelect">查看详情</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="sxq-table">
+            <table class="t-box at" id="sxq-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -108,17 +91,7 @@
                         <th>最后修改日期</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <!--<tr>
-                        <td><input type="checkbox"></td>
-                        <td>金夫人婚纱摄影</td>
-                        <td>拍摄/写真</td>
-                        <td>橙袋科技</td>
-                        <td>￥500-￥999</td>
-                        <td>￥500-￥999</td>
-                        <td>2016-10-20</td>
-                    </tr>-->
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
         <div id="pagination_div"></div>
