--- a/jj-service-web/src/main/webapp/static/html/suser/rclist.html
+++ b/jj-service-web/src/main/webapp/static/html/suser/rclist.html
@@ -10,7 +10,7 @@
 
 <body>
 <link rel="import" href="../body-top.html?__inline">
-<div class="bigbox">
+<div class="bigbox clearfix">
     <ul class="name">
   		<li><a href="./center.html">企业中心<span>></span></a></li>
         <li><a href="./rclist.html">我要人才<span>></span></a></li>
@@ -24,8 +24,8 @@
     
 	    <ul class="lg_tnav_wrap" id="rcUl">
             <li><a href="javascript:void(0)" class="current">已发布职位</a></li>
-            <li><a href="javascript:void(0)" >应聘简历</a></li>
-            <li><a href="javascript:void(0)" >搜简历</a></li>
+            <li><a href="javascript:void(0)">应聘简历</a></li>
+            <li><a href="javascript:void(0)">搜简历</a></li>
         </ul>
         <div id="yfbzw" class="rcContent rcContent0">
             <div> 
@@ -34,7 +34,7 @@
                 <div class="cdh" id="zwDelete">删除</div>
                 <div class="cdh" id="zwSelect">查看详情</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="yfbzw-table">
+            <table class="t-box at" id="yfbzw-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -46,14 +46,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!--<tr>
-                        <td><input type="checkbox"></td>
-                        <td>杭州橙袋科技有限公司</td>
-                        <td>运营</td>
-                        <td>杭州</td>
-                        <td>15k-30k</td>
-                        <td>2016-10-20</td>
-                    </tr>-->
+                    <tr><td colspan='6'><i class='loading-icon'></i></td></tr>
                 </tbody>
             </table>
         </div>
@@ -63,7 +56,7 @@
                 <div class="cdh" id="ypjlDownload">下载</div>
                 <div class="cdh" id="ypjlSelect">查看详情</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="ypjl-table">
+            <table class="t-box at" id="ypjl-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -75,38 +68,28 @@
                         <th>投递日期</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>杭州橙袋科技有限公司</td>
-                        <td>运营</td>
-                        <td>杭州</td>
-                        <td>15k-30k</td>
-                        <td class="yxStatus">2016-10-20</td>
-                        <td>2016-10-20</td>
-                    </tr>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
         <div id="sjl" class="rcContent rcContent2 hidden">
             <div>
-                <select class="hp24p" id="rcType">
+                <select class="hp25p" id="rcType">
                     <option value="-1">请选择需求类型</option>
                 </select>
-                <select class="hp24p" id="province">
+                <select class="hp25p" id="province">
                     <option value="-1">请选择省份</option>
                 </select>
-                <select class="hp24p" id="city" disabled>
+                <select class="hp25p" id="city" disabled>
                     <option value="-1">请选择城市</option>
                 </select>
-                <input type="button" class="btn btn-small ml20" id="searchBtn" value="搜简历"/>
+                <input type="button" class="btn btn-small ml20 va-b" id="searchBtn" style="border: 1px solid #CDCDCD;" value="搜简历"/>
             </div>
-            <div> 
+            <div class="mt10"> 
                 <div class="cdh" id="sjlWatch">预览</div>
                 <div class="cdh" id="sjlLike">感兴趣</div>
                 <div class="cdh" id="sjlDownload">下载</div>
             </div> 
-            <table class="t-box at" style="float:left;width:100%;" id="sjl-table">
+            <table class="t-box at" id="sjl-table">
                 <thead>
                     <tr class="apply-j">
                         <th>&nbsp;</th>
@@ -132,18 +115,6 @@
         </div>
         
         <div id="pagination_div"></div>
-        <!--<div class="page layer" id="pagination">
-            <nav class="jq-pagination">
-                <li class="page-prev"><a href="">&lt;</a></li>
-                <li class="page-number curr"><a href="">1</a></li>
-                <li class="page-number"><a href="">2</a></li>
-                <li class="page-number"><a href="">3</a></li>
-                <li class="page-number"><a href="">...</a></li>
-                <li class="page-number"><a href="">6</a></li>
-                <li class="page-next"><a href="">&gt;</a></li>
-            </nav>
-        </div> -->
-
     </div>
 </div>
 <!--页尾-->
