--- a/jj-service-web/src/main/webapp/static/html/xuser/center.html
+++ b/jj-service-web/src/main/webapp/static/html/xuser/center.html
@@ -11,8 +11,8 @@
 <div class="bigbox clearfix">
   <ul  class="name">
     <li><a href="./center.html">我的中心<span>></span></a></li>
-    <li><a href="">我是人才<span>></span></a></li>
-    <li><a href="">我的服务<span>></span></a></li>    
+    <li><a href="./rclist.html">我是人才<span>></span></a></li>
+    <li><a href="./fwlist.html">我的服务<span>></span></a></li>    
   </ul>
   <!--右边-->
   <div class="area">
